--- a/MGRAnalysisHelper/MGRAnalysisHelper/Content/bootstrap.css
+++ b/MGRAnalysisHelper/MGRAnalysisHelper/Content/bootstrap.css
@@ -5515,9 +5515,9 @@ a.list-group-item:focus {
 }
 
 .panel-danger > .panel-heading {
-  color: #b94a48;
-  background-color: #f2dede;
-  border-color: #eed3d7;
+  color: #428bca;
+  background-color: #222222;
+  border-color: #222222;
 }
 
 .panel-danger > .panel-heading + .panel-collapse .panel-body {
