--- a/MGRAnalysisHelper/MGRAnalysisHelper/Views/Home/Contact.cshtml
+++ b/MGRAnalysisHelper/MGRAnalysisHelper/Views/Home/Contact.cshtml
@@ -1,17 +1,120 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
-
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Przeprowadź porównanie</h1>
+        </div>
+        <!-- /.col-lg-12 -->
+    </div>
+    <div class="row">
+        <div class="col-lg-10">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    WPROWADŹ DANE ANALIZY
+                </div>
+                <div class="panel-body">
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            <label>Text Input</label>
+                            <input class="form-control">
+                            <p class="help-block">Example block-level help text here.</p>
+                        </div>
+                        <div class="form-group">
+                            <label>Text Input</label>
+                            <input class="form-control">
+                            <p class="help-block">Example block-level help text here.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-10">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    WYBIERZ SYSTEMY DO PORÓWNANIA
+                </div>
+                <div class="panel-body">
+                    <div class="col-lg-6">
+                        <div class="form-group">
+                            <label>Selects</label>
+                            <select class="form-control">
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label>Selects</label>
+                            <select class="form-control">
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-10">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    WYBIERZ KRYTERIA OCENY
+                </div>
+                <div class="panel-body">
+                    <div class="col-lg-4">
+                        <div class="form-group">
+                            <label>Checkboxes</label>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" value="">Checkbox 1
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" value="">Checkbox 2
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" value="">Checkbox 3
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="form-group">
+                            <label>Checkboxes</label>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" value="">Checkbox 1
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" value="">Checkbox 2
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" value="">Checkbox 3
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-footer">
+                    <hr class="divider">
+                    <button type="submit" class="btn btn-default">Submit Button</button>
+                    <a href="wagi.html">Przejdz do wag</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /.row -->
+</div>
