Poprawienie widokow i poczatek generowania raportu

--- a/MGRAnalysisHelper/MGRAnalysisHelper/Views/Portals/Details.cshtml
+++ b/MGRAnalysisHelper/MGRAnalysisHelper/Views/Portals/Details.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Historia</h1>
+        <h1 class="page-header">Portal</h1>
     </div>
     <!-- /.col-lg-12 -->
 </div>
@@ -14,7 +14,7 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                Dodaj portal
+                Szczegóły portalu
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
@@ -44,8 +44,8 @@
             </div>
             <div class="panel-footer">
                 <p>
-                    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-                    @Html.ActionLink("Back to List", "Index")
+                    @Html.ActionLink("Edytuj", "Edit", new { id = Model.ID }) |
+                    @Html.ActionLink("Wróć do listy", "Index")
                 </p>
             </div>
             <!-- /.panel-body -->
