--- a/MGRAnalysisHelper/MGRAnalysisHelper/Views/Portals/Index.cshtml
+++ b/MGRAnalysisHelper/MGRAnalysisHelper/Views/Portals/Index.cshtml
@@ -15,7 +15,7 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                @Html.ActionLink("Create New", "Create")
+                @Html.ActionLink("Utwórz nowy", "Create")
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
@@ -40,9 +40,9 @@
                                 @Html.DisplayFor(modelItem => item.Opis)
                             </td>
                             <td>
-                                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                                @Html.ActionLink("Edytuj", "Edit", new { id = item.ID }) |
+                                @Html.ActionLink("Szczegóły", "Details", new { id = item.ID }) |
+                                @Html.ActionLink("Usuń", "Delete", new { id = item.ID })
                             </td>
                         </tr>
                     }
