--- a/MGRAnalysisHelper/MGRAnalysisHelper/Views/Shared/_Layout.cshtml
+++ b/MGRAnalysisHelper/MGRAnalysisHelper/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                             <a href="#"><i class="fa fa-wrench fa-fw"></i> Konfiguracja analizy<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    @Html.ActionLink("Dodaj system", "Index", "Portals")
+                                    @Html.ActionLink("Dodaj portal", "Index", "Portals")
                                 </li>
                                 <li>
                                     @Html.ActionLink("Dodaj kryteria", "Index", "Kryterium")
