--- a/MGRAnalysisHelper/MGRAnalysisHelper/Views/Waga/Konfiguracja.cshtml
+++ b/MGRAnalysisHelper/MGRAnalysisHelper/Views/Waga/Konfiguracja.cshtml
@@ -14,7 +14,7 @@
     <div class="col-lg-10">
         <div class="panel panel-primary">
             <div class="panel-heading">
-                KONFIGURACJA OCEN
+                KONFIGURACJA WAG
             </div>
             <div class="panel-body">
                 <div class="table-responsive">
