--- a/MGRAnalysisHelper/MGRAnalysisHelper/Views/Analiza/Index.cshtml
+++ b/MGRAnalysisHelper/MGRAnalysisHelper/Views/Analiza/Index.cshtml
@@ -16,7 +16,7 @@
         <div class="panel panel-default">
             <!-- /.panel-heading -->
             <div class="panel-body">
-                <table class="table">
+                <table class="table table-striped table-bordered table-hover">
                     <tr>
                         <th>
                             @Html.DisplayNameFor(model => model.Nazwa)
