--- a/MGRAnalysisHelper/MGRAnalysisHelper/Views/Kryterium/Create.cshtml
+++ b/MGRAnalysisHelper/MGRAnalysisHelper/Views/Kryterium/Create.cshtml
@@ -29,7 +29,7 @@
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
                             @Html.LabelFor(model => model.Nazwa, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
+                            <div class="col-md-6">
                                 @Html.EditorFor(model => model.Nazwa, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Nazwa, "", new { @class = "text-danger" })
                             </div>
@@ -37,7 +37,7 @@
 
                         <div class="form-group">
                             @Html.LabelFor(model => model.Opis, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
+                            <div class="col-md-6">
                                 @Html.EditorFor(model => model.Opis, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Opis, "", new { @class = "text-danger" })
                             </div>
@@ -45,14 +45,14 @@
 
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" value="Create" class="btn btn-default" />
+                                <input type="submit" value="Utwórz" class="btn btn-default" />
                             </div>
                         </div>
                     </div>
                 }
             </div>
             <div class="panel-footer">
-                @Html.ActionLink("Back to List", "Index")
+                @Html.ActionLink("Wróć do listy", "Index")
             </div>
             <!-- /.panel-body -->
         </div>
