--- a/MGRAnalysisHelper/MGRAnalysisHelper/Views/Kryterium/Details.cshtml
+++ b/MGRAnalysisHelper/MGRAnalysisHelper/Views/Kryterium/Details.cshtml
@@ -44,8 +44,8 @@
             </div>
             <div class="panel-footer">
                 <p>
-                    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-                    @Html.ActionLink("Back to List", "Index")
+                    @Html.ActionLink("Edytuj", "Edit", new { id = Model.Id }) |
+                    @Html.ActionLink("Wróć do listy", "Index")
                 </p>
             </div>
             <!-- /.panel-body -->
