--- a/MGRAnalysisHelper/MGRAnalysisHelper/Views/Kryterium/Edit.cshtml
+++ b/MGRAnalysisHelper/MGRAnalysisHelper/Views/Kryterium/Edit.cshtml
@@ -31,7 +31,7 @@
 
                         <div class="form-group">
                             @Html.LabelFor(model => model.Nazwa, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
+                            <div class="col-md-6">
                                 @Html.EditorFor(model => model.Nazwa, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Nazwa, "", new { @class = "text-danger" })
                             </div>
@@ -39,15 +39,15 @@
 
                         <div class="form-group">
                             @Html.LabelFor(model => model.Opis, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
-                                @Html.EditorFor(model => model.Opis, new { htmlAttributes = new { @class = "form-control" } })
+                            <div class="col-md-6">
+                                @Html.TextAreaFor(model => model.Opis, 10, 100, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Opis, "", new { @class = "text-danger" })
                             </div>
                         </div>
 
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" value="Save" class="btn btn-default" />
+                                <input type="submit" value="Zapisz" class="btn btn-default" />
                             </div>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
 
             </div>
             <div class="panel-footer">
-                @Html.ActionLink("Back to List", "Index")
+                @Html.ActionLink("Wróć do listy", "Index")
             </div>
             <!-- /.panel-body -->
         </div>
