--- a/MGRAnalysisHelper/MGRAnalysisHelper/Views/Ocena_Kryterium/Ocena.cshtml
+++ b/MGRAnalysisHelper/MGRAnalysisHelper/Views/Ocena_Kryterium/Ocena.cshtml
@@ -26,7 +26,7 @@
         </div>
         <div class="panel panel-primary">
             <div class="panel-heading">
-                KONFIGURACJA WAG
+                KONFIGURACJA OCEN
             </div>
             <div class="panel-body">
                 <div class="table-responsive">
@@ -136,8 +136,7 @@
     <div class="col-lg-12">
         <row>
             <hr class="divider">
-            <button type="submit" class="btn btn-default">Submit Button</button>
-            <a href="index.html">Przejdź do raportu końcowego</a>
+            <a class="btn btn-default" href="@Url.Action("Raport", "Analiza", new {id = 1})">Generuj raport końcowy</a>
             <hr class="divider">
         </row>
     </div>
