--- a/MGRAnalysisHelper/MGRAnalysisHelper/Views/Ocena_Kryterium/WystawOcene.cshtml
+++ b/MGRAnalysisHelper/MGRAnalysisHelper/Views/Ocena_Kryterium/WystawOcene.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Ocena dla @Model.kryterium.Nazwa</h1>
+        <h1 class="page-header">Wystaw ocenę</h1>
     </div>
     <!-- /.col-lg-12 -->
 </div>
@@ -15,46 +15,73 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                Edytuj kryterium
+                Ocena dla kryterium:<strong> @Model.kryterium.Nazwa</strong>   
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
-               @using (Html.BeginForm())
-               {
-                @Html.AntiForgeryToken()
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
 
-                <div class="form-horizontal">
-                    <hr />
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    @Html.HiddenFor(model => model.Id)
-                    <div>
-                        @Model.kryterium.Nazwa
-                        @Model.kryterium.Opis
-                    </div>
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Wartosc, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-lg-6">
-                            @Html.EditorFor(model => model.Wartosc, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Wartosc, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
+                        <div class="form-horizontal">
+                            <div class="form-group">
+                                <div class="col-lg-6">
+                                    <p> <b>Opis kryterium:</b> @Model.kryterium.Opis</p>
+                                </div>
+                                </div>
+                                <hr />
+                                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                @Html.HiddenFor(model => model.Id)
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.Wartosc, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-lg-6">
+                                        @Html.EditorFor(model => model.Wartosc, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.Wartosc, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Opis, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-lg-6">
-                            @Html.TextAreaFor(model => model.Opis, 10, 100, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Opis, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Wystaw ocene" class="btn btn-default" />
-                        </div>
-                    </div>
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.Opis, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-lg-6">
+                                        @Html.TextAreaFor(model => model.Opis, 10, 100, new { htmlAttributes = new { @class = "form-control" } })
+                                        @Html.ValidationMessageFor(model => model.Opis, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+                                <div class="form-group" style="display:none;">
+                                    @Html.LabelFor(model => model.KryteriumID, "KryteriumID", htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-md-10">
+                                        @Html.DropDownList("KryteriumID", null, htmlAttributes: new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.KryteriumID, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+                                <div class="form-group" style="display:none;">
+                                    @Html.LabelFor(model => model.PortalId, "PortalId", htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-md-10">
+                                        @Html.DropDownList("PortalId", null, htmlAttributes: new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.PortalId, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+                                <div class="form-group" style="display:none;">
+                                    @Html.LabelFor(model => model.AnalizaId, "AnalizaId", htmlAttributes: new { @class = "control-label col-md-2" })
+                                    <div class="col-md-10">
+                                        @Html.DropDownList("AnalizaId", null, htmlAttributes: new { @class = "form-control" })
+                                        @Html.ValidationMessageFor(model => model.AnalizaId, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+
+
+                                <div class="form-group">
+                                    <div class="col-md-offset-2 col-md-10">
+                                        <input type="submit" value="Wystaw ocene" class="btn btn-default" />
+                                    </div>
+                                </div>
+                            </div>
+                    }
+
                 </div>
-               }
-
-            </div>
             <div class="panel-footer">
                 @Html.ActionLink("Ocena", "Ocena_Kryterium", new { id = 1, id1 = 2 })
             </div>
