--- a/MGRAnalysisHelper/MGRAnalysisHelper/Views/Portals/Create.cshtml
+++ b/MGRAnalysisHelper/MGRAnalysisHelper/Views/Portals/Create.cshtml
@@ -28,7 +28,7 @@
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
                             @Html.LabelFor(model => model.Nazwa, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
+                            <div class="col-md-6">
                                 @Html.EditorFor(model => model.Nazwa, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Nazwa, "", new { @class = "text-danger" })
                             </div>
@@ -36,7 +36,7 @@
 
                         <div class="form-group">
                             @Html.LabelFor(model => model.Opis, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
+                            <div class="col-md-6">
                                 @Html.EditorFor(model => model.Opis, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Opis, "", new { @class = "text-danger" })
                             </div>
@@ -53,7 +53,7 @@
             </div>
             <div class="panel-footer">
                 <div>
-                    @Html.ActionLink("Back to List", "Index")
+                    @Html.ActionLink("Wróć do listy", "Index")
                 </div>
             </div>
             <!-- /.panel-body -->
