--- a/MGRAnalysisHelper/MGRAnalysisHelper/Views/Portals/Edit.cshtml
+++ b/MGRAnalysisHelper/MGRAnalysisHelper/Views/Portals/Edit.cshtml
@@ -14,7 +14,7 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                DataTables Advanced Tables
+                Edycja danych portalu
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
@@ -55,7 +55,7 @@
             </div>
             <div class="panel-footer">
                 <div>
-                    @Html.ActionLink("Back to List", "Index")
+                    @Html.ActionLink("Wróć do listy", "Index")
                 </div>
             </div>
             <!-- /.panel-body -->
